2005-03-29  Mike Kestner  <mkestner@novell.com>

	* glib/Marshaller.cs : special case ucs4 "0" conversion.
	[Fixes #74175]

2005-03-28  Mike Kestner  <mkestner@novell.com>

	* gdk/Pixbuf.custom  : add FromDrawable static method and obsolete
	CreateFromNative, which should've been static.  [Fixes #74155]

2005-03-28  Mike Kestner  <mkestner@novell.com>

	* generator/Signal.cs  : Dispose the values passed to 
	g_signal_chain_from_overriden in base VM invocations. [Fixes #73522]

2005-03-25  Mike Kestner  <mkestner@novell.com>

	* */makefile.win32 : add gapi-cdecl-insert to assembly target.

2005-03-25  Mike Kestner  <mkestner@novell.com>

	* generator/CallbackGen.cs : add CDeclCallback attrs to native dels.
	* generator/Signal.cs : add CDeclCallback attrs to native dels.

2005-03-25  Mike Kestner  <mkestner@novell.com>

	* */*.cs : tag native callback delegates with [CDeclCallback].
	* */*.custom : tag native callback delegates with [CDeclCallback].

2005-03-24  Mike Kestner  <mkestner@novell.com>

	* generator/CallbackGen.cs : don't create native delegates for nulls.
	* generator/ObjectGen.cs : revamp the ObjectManager code.
	* glib/Object.cs : use new ObjectManager.RegisterType overload.
	* glib/ObjectManager.cs : rewrite to kill the lameass LoadWithPartial
	hack and keep a GType to Type mapping for quicker lookup/activation.

2005-03-23  Mike Kestner  <mkestner@novell.com>

	* gapi-cdecl-insert : a little perl script to insert modopts
	* Makefile.am : dist the new script.
	for cdecl callback delegates on win32.
	* glade/makefile.win32 : use gapi-cdecl-insert
	* glade/XML.custom : add [GLib.CDeclCallback] to RawXMLConnectFunc.
	* glib/Makefile.am : add new file.
	* glib/makefile.win32 : use gapi-cdecl-insert
	* glib/CDeclCallbackAttribute.cs : new attr to tag delegates with
	that will be invoked from native code. We have to mangle the il
	with a modopt otherwise they are stdcall'd.
	* glib/ManagedValue.cs : add [GLib.CDeclCallback] to Copy/Free.