@@ -99,5 +99,21 @@
         <remarks>None.</remarks>
       </Docs>
     </Member>
+    <Member MemberName="GetEvent">
+      <MemberSignature Language="C#" Value="public static Gdk.Event GetEvent (IntPtr raw);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.Event</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="raw" Type="System.IntPtr" />
+      </Parameters>
+      <Docs>
+        <summary>Gets an Event or Event subclass for a native event pointer.</summary>
+        <param name="raw">a <see cref="T:System.IntPtr" /></param>
+        <returns>a <see cref="T:Gdk.Event" /></returns>
+        <remarks />
+      </Docs>
+    </Member>
   </Members>
 </Type>
