@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <api>
   <symbol type="alias" cname="GdkBitmap" name="GdkPixmap" />
-  <symbol type="manual" cname="GdkEvent" name="Gdk.Event"/>
-  <symbol type="manual" cname="GdkEventAny" name="Gdk.Event"/>
+  <symbol type="marshal" cname="GdkEvent" name="Gdk.Event" marshal_type="IntPtr" call_fmt="{0}.Handle" from_fmt="Gdk.Event.GetEvent ({0})"/>
+  <symbol type="marshal" cname="GdkEventAny" name="Gdk.Event" marshal_type="IntPtr" call_fmt="{0}.Handle" from_fmt="Gdk.Event.GetEvent ({0})"/>
   <symbol type="manual" cname="GdkEventButton" name="Gdk.EventButton"/>
   <symbol type="manual" cname="GdkEventClient" name="Gdk.EventClient"/>
   <symbol type="manual" cname="GdkEventConfigure" name="Gdk.EventConfigure"/>
@@ -12,7 +12,7 @@
   <symbol type="manual" cname="GdkEventFocus" name="Gdk.EventFocus"/>
   <symbol type="manual" cname="GdkEventKey" name="Gdk.EventKey"/>
   <symbol type="manual" cname="GdkEventMotion" name="Gdk.EventMotion"/>
-  <symbol type="manual" cname="GdkEventNoExpose" name="Gdk.Event"/>
+  <symbol type="marshal" cname="GdkEventNoExpose" name="Gdk.Event" marshal_type="IntPtr" call_fmt="{0}.Handle" from_fmt="Gdk.Event.GetEvent ({0})"/>
   <symbol type="manual" cname="GdkEventProperty" name="Gdk.EventProperty"/>
   <symbol type="manual" cname="GdkEventProximity" name="Gdk.EventProximity"/>
   <symbol type="manual" cname="GdkEventScroll" name="Gdk.EventScroll"/>
