@@ -1,5 +1,12 @@
 2005-03-29  Mike Kestner  <mkestner@novell.com>
 
+	* generator/Parser.cs : add symbol type='marshal' support.
+	* gdk/Event.cs : add GetEvent method to wrap arbitrary events.
+	* gdk/gdk-symbols.xml : make Event, EventAny, and EventNoExpose
+	marshal symbols using Event.GetEvent (). [Fixes #74184]
+
+2005-03-29  Mike Kestner  <mkestner@novell.com>
+
 	* glib/Marshaller.cs : special case ucs4 "0" conversion.
 	[Fixes #74175]
 
